crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__elementwise_op_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: ops
---
[
    Add,
    Mul,
    Sub,
    Div,
    FusedAddMul,
    Relu,
    Gelu,
    Silu,
    Sigmoid,
    Tanh,
    Clamp,
]
