crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__kv_cache_entry_empty.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: entry
---
KVCacheEntry {
    keys: [
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
    ],
    values: [
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
    ],
    head_dim: 4,
    current_len: 0,
    max_len: 4,
}
