crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__ocl_attention_config_gqa.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
AttentionConfig {
    num_heads: 32,
    num_kv_heads: 8,
    head_dim: 128,
    max_seq_len: 4096,
    causal: false,
    scale: 0.088388346,
}
