crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__ocl_attention_config_mha.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
AttentionConfig {
    num_heads: 8,
    num_kv_heads: 8,
    head_dim: 64,
    max_seq_len: 2048,
    causal: true,
    scale: 0.125,
}
