crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__ocl_tiled_flash_config_custom.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: cfg
---
FlashAttentionConfig {
    tile_q: 64,
    tile_kv: 64,
    causal: false,
}
