crates/bitnet-kernels/tests/snapshots/snapshot_wave_20__padding_mode_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_20.rs
expression: modes
---
[
    Zero(
        0,
    ),
    Zero(
        3,
    ),
    Same,
]
